# PurrChat

./: .editorconfig  .gitignore  .gitlab-ci.yml  .impeccable.md  .prettierignore  AGENTS.md  CI_CD_GUIDE.md  DOCKER_NETWORK_FIX.md  LICENSE  Makefile  PRODUCT.md  README.md  docker-compose.yml  eslint.config.js  nginx-proxy.conf  package.json  pnpm-lock.yaml  turbo.json
.agents/memory/: MEMORY.md  feedback_build_commands.md  feedback_github_cli_sandbox_network.md  feedback_search_tools.md  project_bot_phase3_status.md  project_bot_system_audit_2026_07.md  project_r2_china_access.md  project_xstate_migration.md
.github/workflows/: ci.yml  close-linked-issues.yml  dev-to-beta.yml
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  package.json
apps/bot-engine/: Dockerfile  eslint.config.js  package.json  tsconfig.json
apps/frontend/: .dockerignore  .env.development  .env.example  .env.production  .prettierignore  Dockerfile  README.md  index.html  (+7 more)
apps/frontend/src-tau/: Cargo.toml  tauri.conf.json
apps/frontend/src-tau/capabilities/: desktop.json  mobile.json
apps/frontend/src-tau/icons/: icon.icns
apps/frontend/src-tau/src/: lib.rs  main.rs
docs/: BOT_API_OPERATIONS.md  BOT_STUDIO_MCP_PLAN.md  BOT_STUDIO_NODE_GRAPH_PLAN.md  COMMIT_CONVENTION.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  MIGRATION.md  MIGRATIONS.md  ROADMAP.md  SECURITY_ISSUES.md  TESTING_AND_DEPLOYMENT.md  TESTING_SUMMARY.md  TURBOREPO_GUIDE.md  WEBSOCKET_ARCHITECTURE.md  WEBSOCKET_DEBUG_GUIDE.md
scripts/: merge-dev-to-test.sh  run-local-ci.sh
(+409 files in other folders)
